fix-621-footer-content-mismatch-spacing-carousel
1. Fresh start section - Carousel arrows background fixed in desktop & mobile view.
2. Join list - field updated (3 fields only with Email field required) and design updated based on FIGMA.

--- a/pages/room-detail/room-detail-sync.css
+++ b/pages/room-detail/room-detail-sync.css
@@ -29,3 +29,9 @@
         @apply px-8;
     }
 }
+
+@media all and ( max-width: 899px ) {
+    .com-car-nav {
+        bottom: 17.25rem;
+    }
+}
